# privateblog

./: .gitignore  Pipfile  README.md  manage.py  pyproject.toml
core/: admin.py  forms.py  models.py  views.py
core/migrations/: 0001_initial.py  0002_remove_appuser_uid.py  0003_post.py  0004_auto_20190710_0927.py  0005_auto_20190730_0200.py
privateblog/: settings.py  urls.py  wsgi.py
privateblog.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
static/: style.css
templates/: base.html  home.html
templates/account/: login.html  logout.html
templates/core/: appuser_detail.html  login_prompt.html  no_follow.html  post_detail.html  post_form.html  twitter_rate_limit.html
